# pbi_generator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  app.py  azdo_client.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
deploy/: deployment.yaml  pvc.yaml  route.yaml  service.yaml
k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
static/css/: style.css
static/js/: app.js
templates/: admin.html  base.html  index.html  login.html  register.html  register_success.html  settings.html
