[project]
name = "pbi-generator"
version = "0.1.0"
description = "AI-powered Scrum PBI generator with Azure DevOps integration"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-login>=0.6",
    "flask-sqlalchemy>=3.1",
    "flask-bcrypt>=1.0",
    "openai>=1.0",
    "requests>=2.31",
    "gunicorn>=21.2",
]

[project.scripts]
pbi-generator = "app:create_app"

[tool.uv]
dev-dependencies = []
